Legends are now displayed
Not sure they're updating correctly. Debugging needed!

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <script src='Bezel.js' defer></script>
     <script src='CShapeCollection.js' defer></script>
+    <script src='Legends.js' defer></script>
     <script src='Compose.js' defer></script>
     <link rel="stylesheet" href="styles.css">
 </head>
